# Doppelganger

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.sh
app/: __init__.py  main.py
app/api/: routes.py
app/channels/: __init__.py  telegram.py  terminal.py
app/core/: __init__.py  assistant.py  models.py
app/services/: __init__.py  message_history.py  openai_agent.py
app/tools/: __init__.py  agent_tools.py  gmail_client.py
design_docs/: postgres_raw_history.md
doppelganger_core/: .gitignore  AGENTS.md  README.md  pyproject.toml  start.sh
doppelganger_core/app/: __init__.py  logging_utils.py  main.py
doppelganger_core/app/api/: routes.py
doppelganger_core/app/core/: assistant.py
doppelganger_core/app/services/: dream_mode.py  internal_documents.py  openai_agent.py  unified_memory.py
doppelganger_core/app/tools/: agent_tools.py  file_tools.py
doppelganger_core/design_docs/: gmail_integration_plan.md  postgres_raw_history.md  v0_agent_loop.md
doppelganger_core/mind/: DIRECTIVES.md  SOUL.md
doppelganger_core/tests/: __init__.py  conftest.py  helpers.py  test_agent_tools.py  test_assistant.py  test_dream_mode.py  test_file_tools.py  test_internal_documents.py  test_logging_utils.py  test_models.py  test_openai_agent.py  test_terminal.py  test_unified_memory.py
internal_documents_core/: .gitignore  AGENTS.md  README.md  ingest.sh  pyproject.toml
internal_documents_core/core/: chunking.py  document_sources.py  embeddings.py  ingest.py  vector_store.py
internal_documents_core/internal_documents_core/: __init__.py  ingest.py  vector_store.py
internal_documents_core/tests/: test_chunking.py  test_document_sources.py  test_embeddings.py  test_ingest.py  test_vector_store.py
mind/: DIRECTIVES.md  SOUL.md
postgresql_viewer/: README.md  package-lock.json  package.json
postgresql_viewer/src/app/: globals.css  layout.tsx  page.tsx
postgresql_viewer/src/app/api/connect/: route.ts
postgresql_viewer/src/app/api/graph/: route.ts
postgresql_viewer/src/app/api/preview/: route.ts
postgresql_viewer/src/components/: database-viewer.module.css  database-viewer.tsx
postgresql_viewer/src/lib/: postgres.ts
tests/: test_agent_tools.py  test_api_routes.py  test_assistant.py  test_gmail_client.py  test_main.py  test_message_history.py  test_openai_agent.py  test_telegram.py
