[project]
name = "internal-documents-core"
version = "0.1.0"
description = "Internal document ingestion and vector store population"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["internal_documents_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
